--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,144 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.products {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-wrap: wrap;
+
+}
+
+.product-card {
+  padding: 2%;
+  flex-grow: 1;
+  flex-basis: 16%;
+
+}
+.product-info {
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+body {
+  background-color: #d3d756;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+
+.cont {
+  display: flex;
+  justify-content: center;
+}
+
+.back {
+  padding: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
+  color: white;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.change {
+  background-color: rgb(238, 177, 10);
+  color: white;
+  padding: 20px;
+  border: none;
+  border-radius: 10px;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+
+}
+
+h1, h2, h3, h4 {
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
+button {
+  margin: 10px;
+}
+
+nav {
+  background-color: rgb(238, 177, 10);
+  display: flex;
+  justify-content: center;
+  padding: 15px;
+}
+.Link {
+  padding: 10px 40px;
+  text-decoration: none;
+  color: white;
+  text-transform: uppercase;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+video {
+  object-fit: cover;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
+
+}
+.name {
+  display: flex;
+  justify-content: center;
+  align-content: start;
+ color: black;
+ background-color: #d3d756;
+
+}
+.order {
+  background-color:  rgb(238, 177, 10);
+  border: none;
+  color: white;
+  padding: 10px;
+  width: 100px;
+  border-radius: 10%;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+.about {
+  display: flex;
+  color: white;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+
+}
+.picture {
+  padding: 4%;
+}
+.contact {
+  display: flex;
+  justify-content: space-around;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+
+}
+.form {
+  padding: 10px;
+
+}
+.space {
+  border: 2px solid white;
+  padding: 6px;
+  color: rgb(238, 177, 10);
+  width: 150px;
+
+}
+label {
+  margin-right: 20px;
+}
+.confirm {
+  color: rgb(247, 139, 6);
+}
+a {
+  color: black;
+  text-decoration-line: none;
 }
